# xfinity-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  deny.toml
.codereview/agents/rust/: index.yaml
.codereview/agents/rust/implementation/: index.yaml  prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  upstream-changes.md
src/: cli.rs  client.rs  config.rs  dates.rs  error.rs  main.rs  output.rs  profile.rs  secrets.rs  selfupdate.rs
src/commands/: account.rs  api.rs  auth.rs  billing.rs  config_cmd.rs  equipment.rs  internet.rs  mod.rs  outages.rs  payments.rs  self_update.rs  set_credential.rs  summary.rs
