[package]
name = "xfinity-cli"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
description = "Manage your Xfinity account from the command line — account, billing, payments, internet usage. Keychain-secured, agent-friendly. Unofficial."
license = "MIT OR Apache-2.0"
repository = "https://github.com/piekstra/xfinity-cli"
homepage = "https://github.com/piekstra/xfinity-cli"
readme = "README.md"
keywords = ["xfinity", "comcast", "billing", "internet", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "xfin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
pk-cli-core = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.3", features = ["reqwest"] }
pk-cli-secrets = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.3" }
pk-cli-config = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.3" }
pk-cli-selfupdate = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.3" }
pk-cli-auth = { git = "https://github.com/piekstra/cli-common", tag = "v0.1.3" }
clap_complete = "4"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }


[profile.release]
strip = true
lto = true
opt-level = "z"
